Fixed the navbar on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -101,3 +101,9 @@ img {
   }
 }
 
+/* @media (max-width: 768px) {
+  .user-icon {
+    display: none;
+  }
+
+} */
